# Fake-News-Detector

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: aws.yml
detector-backend/: .dockerignore  Dockerfile  example.env  pyproject.toml
detector-backend/app/: db.py  domain.py  main.py  schemas.py
detector-backend/app/api/: dependencies.py  routes_fact_check.py  routes_highlight.py  routes_predict.py
detector-backend/app/core/: config.py  detector.py  fact_check_agent.py  fact_check_instructions.md  logging_config.py
detector-backend/app/pipelines/: base_pipeline.py  germa_pipeline.py  german_news_pipeline.py  germanfakenc_pipeline.py  gossipcop_pipeline.py  webzio_pipeline.py  welfake_pipeline.py
detector-backend/app/services/: article_extractor.py  data_service.py  german_fake_news_scraper.py  language_service.py
detector-backend/app/tests/: test_api.py  test_detector.py
detector-backend/notes/: detector_training.ipynb  fake_news.ipynb  webz_io_exploration.ipynb
detector-backend/rawdata/COVID-19_Fake_News_Dataset/: README.md
detector-backend/rawdata/GermanFakeNC/: README.md
detector-backend/rawdata/German_News_Dataset/: README.md
detector-backend/rawdata/WELFake_Dataset/: README.md
detector-backend/rawdata/fake-and-real-news-dataset/: README.md
detector-backend/rawdata/germa/: README.md
detector-backend/rawdata/webz_io_Dataset/: README.md
detector-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
detector-frontend/src/: App.svelte  app.css
detector-frontend/src/lib/: api.js  utils.js
fake_news_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
