[project]
name = "fake-news-detector"
version = "0.1.0"
description = "Fake News Detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lingua-language-detector>=2.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]
