[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-detector"
version = "0.1.0"
description = "Fake News Detection backend API"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "ddgs>=1.0.0",
  "fastapi>=0.121.1",
  "lingua-language-detector>=2.1.1",
  "pandas>=2.3.3",
  "duckduckgo-search>=6.3.0",
  "pydantic-ai>=1.38.0",
  "pymongo>=4.15.4",
  "pydantic-settings>=2.12.0",
  "fundus>=0.5.0,<0.6.0",
  "requests>=2.32.5",
  "scikit-learn>=1.7.2",
  "shap>=0.49.1",
  "tldextract>=5.1.2",
  "torch==2.9.1",
  "transformers>=4.57.3",
  "uvicorn[standard]>=0.38.0",
  "validators>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=7.1.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.7",
  "seaborn>=0.13.2",
  "wordcloud>=1.9.4",
  "pytest>=9.0.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
